--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -213,10 +213,5 @@ provide feedback.
 
 ### How big is the expected effort to migrate code to v11?
 
-- A lot of the changes made will be name-based.
-
-- Some changes with components will require updating to the new component API or
-  package.
-
-- For details about what can be done now, see our
-  [April update Medium article](https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea).
+_We'll have more on this once we have interviewed teams that have successfully
+migrated to v11._
