fix(migration-docs): updated homepage link and add nav to develop

--- a/src/pages/all-about-carbon/releases.mdx
+++ b/src/pages/all-about-carbon/releases.mdx
@@ -61,7 +61,8 @@ convenience. For more details about this release, see our
 Carbon v10 implemented our newly-updated brand expression (IBM Design Language
 v2) into our components. The updated components required product teams to
 redesign product UIs and begin a migration plan to comply with IBM brand
-experience standards.
+experience standards. For more details about this release, see our
+[v10 release page](https://www.carbondesignsystem.com/help/migration-guide/overview).
 
 ## Release history
 
