--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -17,6 +17,17 @@ possible by detailing all of the updates below.
 
 </PageDescription>
 
+<AnchorLinks>
+
+<AnchorLink>Changelog</AnchorLink>
+<AnchorLink>Components</AnchorLink>
+<AnchorLink>Sass Modules</AnchorLink>
+<AnchorLink>Color Tokens</AnchorLink>
+<AnchorLink>Theming</AnchorLink>
+<AnchorLink>CSS Grid</AnchorLink>
+
+</AnchorLinks>
+
 ## Changelog
 
 | Feature                   | Status                           | Migrate                       | Packages or components impacted                                                      |
