fix broken link

--- a/src/pages/data-visualization/complex-charts/index.mdx
+++ b/src/pages/data-visualization/complex-charts/index.mdx
@@ -140,7 +140,7 @@ increasing the contrast of the second hue to the other end of the scale. The
 neutral midpoint is often referred to as the "inflection point" (for example, a
 0 value midway between -100 and +100).
 
-[Divergent scales](../data-visualization/color-palettes#diverging-palettes)
+[Divergent scales](../color-palettes#diverging-palettes)
 require three colors for their correspondent values (min, max, and inflection
 point) and Carbon has provided two approved palettes for divergent
 visualizations. Although the examples here use the "discrete" (stepped scale)
