--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -93,7 +93,7 @@ guidance for more information.
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Migrating color tokens"
-      href="https://github.com/carbon-design-system/carbon/pull/9245">
+      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md">
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
